Edit on about me text and  separat CV file and about me file

--- a/project/CSS/File.css
+++ b/project/CSS/File.css
@@ -9,3 +9,13 @@ body {
 body{ 
     color:whitesmoke;
 }
+
+body{
+    text-align: center ;
+}
+
+body{
+     font: normal oblique 18px Arial ;
+}
+
+
