this my project i have only one issue i can't link my cal in my html

--- a/project/CSS/File.css
+++ b/project/CSS/File.css
@@ -1,6 +1,6 @@
 body { 
-    background-color:slategrey;
-	color:whitesmoke;
+    background-color:azure:
+	color:black;
 	font: normal oblique 18px Arial ;
 	width: 70%;
 	margin-top: 0;
